# Mini_LLM_Serving_Platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.gateway  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  mini_llm_serving_platform_v2_implementation_blueprint (1).md  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
benchmark/: __init__.py  client_smoke_test.py  collect_prometheus_snapshot.py  compare_results.py  generate_report.py  rag_integration_smoke_test.py  run_benchmark.py  sample_prometheus_timeseries.py
benchmark/prompts/: short_prompts.jsonl
deploy/gitops/: README.md  argocd-application-mock.yaml  argocd-application-vllm.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/k8s/: gateway-config.yaml  gateway-deployment.yaml  gateway-hpa.yaml  gateway-ingress.yaml  kustomization.yaml  (+10 more)
deploy/k8s-gpu/: dcgm-exporter.yaml  gateway-config-patch.yaml  gateway-secret-patch.yaml  kustomization.yaml  prometheus-config-patch.yaml  vllm-config.yaml  vllm-deployment.yaml  vllm-secret.yaml  vllm-service.yaml
docs/: api_usage.md  benchmark_report.md  configuration.md  demo.md  design_decisions.md  failure_analysis.md  gateway_overhead_report.md  gitops_deployment.md  performance_benchmarking.md  portfolio_summary.md  production_hardening.md  project_status.md  rag_integration.md  release_process.md  repository_metadata.md  security.md
scripts/: check_release_version.py  demo_portfolio.py  local_e2e.py  warmup_gateway.py
serving/: __init__.py
(+80 files in other folders)
