[project]
name = "mini-llm-serving-platform"
version = "0.1.1"
description = "Production-style FastAPI gateway for OpenAI-compatible LLM serving with mock and vLLM backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "tokenizers>=0.20.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["gateway/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
